@@ -976,4 +976,7 @@ November 30-?? 2011
 	- June 14, 2012 Issue #1008 Provide error information and exit if SpecTclRC.tcl
                         or SpecTclInit.tcl failed.
         - June 14, 2012 Issue #1070 Provide error information for failing Pseudo params.
+	- June 15, 2012 Issue #1046:
+	  * Default to ring format if online.
+	  * Allow user to specify ring name.
 
